# Added: ThreeJS for making future 3D clouds background, Desktop and Mobile specific files to handle different screen versions, customFunctions folder along with detectScreenSize file | Updated: moved navbar rendering to desktop.jsx and mobile.jsx, navbar now uses screenVersion variable to determine which version of the navbar to render, expanded button now has z-index fixing the bug that didn't allow the user to click it when it was collapsed, all jsx now uses screenVersion to determine which version of styling to render

--- a/front-end/src/app.scss
+++ b/front-end/src/app.scss
@@ -1,5 +1,7 @@
 .App {
-  width: 99%;
-  height: 100%;
+  position: relative;
+  height: 100dvh;
+  width: 100dvw;
+  overflow: hidden;
   margin: 0 auto;
 }
