--- a/front-end/src/components/Navbar/Navbar.scss
+++ b/front-end/src/components/Navbar/Navbar.scss
@@ -22,7 +22,7 @@
   }
 }
 
-#navbar {
+#mobile-navbar {
   color: white;
   background-color: #2c2439;
   border-radius: 20px 20px 0px 0px;
@@ -30,41 +30,63 @@
   grid-template-columns: 1;
   align-items: center;
   justify-content: center;
-  // height: 5em;
+  padding: 5px;
 
-  .navbar-title {
-    // border: 3px solid red;
+  .mobile-navbar-title {
     display: flex;
     align-items: center;
     font-size: 35px;
 
-    #navbar-logo {
-      width: 100px;
+    .mobile-navbar-logo {
+      width: 75px;
+      height: auto;
     }
   }
 
-  .navbar-links {
+  .mobile-expanded-button {
+    display: grid;
+    grid-template-columns: 1;
+    gap: 0.5em;
+    background-color: black;
+    z-index: 1000;
+
+    :nth-child(1) {
+      border: 3px solid gray;
+    }
+
+    :nth-child(2) {
+      border: 3px solid gray;
+    }
+
+    :nth-child(3) {
+      border: 3px solid gray;
+    }
+
+    border: none;
+  }
+
+  .mobile-navbar-links {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     font-size: 25px;
 
-    .homepage-button {
+    .mobile-homepage-button {
       // @include bubbly-button(#ff8a65, #e71a46, #db8f15);
       padding: 0px;
       border-radius: 0;
       height: fit-content;
     }
 
-    .habit-page-button {
+    .mobile-habit-page-button {
       // @include bubbly-button(#27e560, #6314e1, #10d8c7);
       padding: 0px;
       border-radius: 0;
       height: fit-content;
     }
 
-    .account-page-button {
+    .mobile-account-page-button {
       // @include bubbly-button(#f47e8a, #88d4f1, #2c2439);
       padding: 0;
       border-radius: 0;
@@ -72,16 +94,106 @@
     }
   }
 
-  .navbar-auth-buttons {
+  .mobile-navbar-auth-buttons {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    margin-top: 0.5em;
 
-    .signin-button {
+    .mobile-signin-button {
       @include bubbly-button(#ff8a65, #e71a46, #db8f15);
+      border: none;
     }
 
-    .signup-button {
+    .mobile-signup-button {
+      @include bubbly-button(#27e560, #6314e1, #10d8c7);
+    }
+  }
+}
+
+#desktop-navbar {
+  color: white;
+  background-color: #2c2439;
+  border-radius: 20px 20px 0px 0px;
+  display: grid;
+  grid-template-columns: 1;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+
+  .desktop-navbar-title {
+    display: flex;
+    align-items: center;
+    font-size: 35px;
+
+    #desktop-navbar-logo {
+      width: 75px;
+      height: auto;
+    }
+  }
+
+  .desktop-expanded-button {
+    display: grid;
+    grid-template-columns: 1;
+    gap: 0.5em;
+    background-color: black;
+
+    :nth-child(1) {
+      border: 3px solid gray;
+    }
+
+    :nth-child(2) {
+      border: 3px solid gray;
+    }
+
+    :nth-child(3) {
+      border: 3px solid gray;
+    }
+
+    border: none;
+  }
+
+  .desktop-navbar-links {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
+
+    .desktop-homepage-button {
+      // @include bubbly-button(#ff8a65, #e71a46, #db8f15);
+      padding: 0px;
+      border-radius: 0;
+      height: fit-content;
+    }
+
+    .desktop-habit-page-button {
+      // @include bubbly-button(#27e560, #6314e1, #10d8c7);
+      padding: 0px;
+      border-radius: 0;
+      height: fit-content;
+    }
+
+    .desktop-account-page-button {
+      // @include bubbly-button(#f47e8a, #88d4f1, #2c2439);
+      padding: 0;
+      border-radius: 0;
+      height: fit-content;
+    }
+  }
+
+  .desktop-navbar-auth-buttons {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 0.5em;
+
+    .desktop-signin-button {
+      @include bubbly-button(#ff8a65, #e71a46, #db8f15);
+      border: none;
+    }
+
+    .desktop-signup-button {
       @include bubbly-button(#27e560, #6314e1, #10d8c7);
     }
   }
