--- a/front-end/src/main.scss
+++ b/front-end/src/main.scss
@@ -9,8 +9,6 @@
 }
 
 body {
-  margin: 0 auto;
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
+  width: 100dvw;
+  height: 100dvh;
 }
